# riss_project

./: Makefile  README.md  ZED_Diagnostic_Results.json  estimates.jsonl  pyproject.toml
arm/: README.md  __init__.py  base_ee_tracker.py  xarm_controller.py
calibration/: README.md  aruco_config.yaml  base_ee.yaml  base_to_camera.yaml  base_to_camera_recovered.yaml  ee_marker_estimated.yaml  hand_eye_samples.yaml  table_marker_references.yaml  transforms.yaml  zed_intrinsics.yaml
calibration/samples/: pose_001_base_ee.yaml  pose_001_marker.yaml  pose_002_base_ee.yaml  pose_002_marker.yaml  pose_003_base_ee.yaml  pose_003_marker.yaml  pose_004_base_ee.yaml  pose_004_marker.yaml  pose_005_base_ee.yaml  pose_005_marker.yaml  pose_006_base_ee.yaml  pose_006_marker.yaml  pose_007_base_ee.yaml  pose_007_marker.yaml  pose_008_base_ee.yaml  pose_008_marker.yaml  pose_009_base_ee.yaml  pose_009_marker.yaml  pose_010_base_ee.yaml  pose_010_marker.yaml  pose_011_base_ee.yaml  pose_011_marker.yaml  pose_012_base_ee.yaml  pose_012_marker.yaml  (+46 more)
calibration/samples-0/: pose_001_marker.yaml  pose_002_marker.yaml  pose_003_base_ee.yaml  pose_003_marker.yaml  pose_004_base_ee.yaml  pose_005_base_ee.yaml  pose_005_marker.yaml  pose_006_base_ee.yaml  pose_007_marker.yaml  pose_008_base_ee.yaml  pose_010_base_ee.yaml
camera/: README.md  aruco_generator.py  aruco_live_viewer.py  aruco_pose.py  build_hand_eye_dataset.py  capture_aruco_sample.py  capture_table_references.py  diagnose_hand_eye.py  fit_hand_eye.py  ransac_grasp_candidate.py  recover_base_to_camera.py  solve_marker_base_pose.py  table_marker_recovery.py  test.py  test_native.cpp  zed_config.py  zed_pointcloud.py
hand/: README.md  cli.py
property_estimation/: README.md  __init__.py  cli.py  models.py  zed_camera.py
tests/: test_aruco_live_viewer.py  test_aruco_marker.py  test_aruco_pose.py  test_base_ee_tracker.py  test_build_hand_eye_dataset.py  test_capture_aruco_sample.py  test_core.py  test_diagnose_hand_eye.py  test_fit_hand_eye.py  test_hand_cli.py  test_ransac_grasp_candidate.py  test_solve_marker_base_pose.py  test_table_marker_recovery.py  test_xarm_controller.py  test_zed_config.py  test_zed_pointcloud.py
(+9 files in other folders)
