[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-physical-properties"
version = "0.1.0"
description = "Infer physical object properties from ZED stereo observations"
requires-python = ">=3.10"

[project.scripts]
zed-properties = "physical_properties.cli:main"
inspire-hand = "hand.cli:main"

[tool.setuptools.packages.find]
include = ["physical_properties*", "hand*"]
