[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-physical-properties"
version = "0.1.0"
description = "Infer physical object properties from ZED stereo observations"
requires-python = ">=3.10"

[project.scripts]
zed-properties = "property_estimation.cli:main"
inspire-hand = "hand.cli:main"
aruco-pose = "camera.aruco_pose:main"

[tool.setuptools.packages.find]
include = ["property_estimation*", "hand*", "camera*"]
